--- a/client/bower.json
+++ b/client/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.15",
-    "materialize": "~0.96.1"
+    "materialize": "~0.96.1",
+    "Chart.js": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
